# Heartbeat-IoT

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.peer.yml  docker-compose.yml
docker/coordinator/: Dockerfile
docker/edge/: Dockerfile
docker/sensor/: Dockerfile
netem/: baseline.sh  enlace_limitado.sh  falla_nodo.sh  latencia_iot.sh  perdida_paquetes.sh  status.sh
rust/: Cargo.toml
rust/src/common/: messages.rs
vpn/cgnat/: README.md
