[package]
name = "heartbeat-iot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sensor"
path = "src/bin/sensor.rs"

[[bin]]
name = "edge"
path = "src/bin/edge.rs"

[[bin]]
name = "coordinator"
path = "src/bin/coordinator.rs"

[dependencies]
tokio      = { version = "1", features = ["full"] }
axum       = "0.7"
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow     = "1.0"
uuid       = { version = "1", features = ["v4", "serde"] }
clap       = { version = "4.4", features = ["derive", "env"] }

[profile.release]
lto = true
codegen-units = 1
